--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ button {
 button:hover {
   box-shadow: none;
   transition: 300ms ease-in-out;
+  transform: translate(-2px, -2px);
 }
 .clear-btn {
   background-color: var(--tangerine);
